Less dependencies reallocations - part 4